2008-02-16  Inge Wallin  <inge@lysator.liu.se>

	Clean up after the last few changes.
	* src/lib/MarbleWidget.cpp (setMapTheme): Clean up
	* src/lib/MarbleMap.{h,cpp} (misc): Clean up
	(repaint): removed
	(update):  removed
	* src/lib/ViewParams.cpp (ViewParams, centerCoordinates): Clean up

	Activate the Projection classes!
	* src/lib/ViewParams.{h,cpp} (viewport): new function
	* src/lib/ViewportParams.{h,cpp} (centerCoordinats): is now const
	* src/lib/MarbleMap.cpp (MarbleMapPrivate): Add 3 projection
	members and one pointer currentProjection.
	(construct): init currentProjection
	(setProjection): set currentProjection
	(screenCoordinates): use current projection class
	(geoCoordinates): use current projection class
	* src/lib/AbstractProjection.h (screenCoordinates): make params const
	* src/lib/SphericalProjection.{h,cpp} (screenCoordinates): make params const
	(geoCoordinates): make params const
	* src/lib/EquirectProjection.{h,cpp} (screenCoordinates): make params const
	(geoCoordinates): make params const
	* src/lib/MercatorProjection.{h,cpp} (screenCoordinates): make params const
	(geoCoordinates): make params const

2008-02-15  Inge Wallin  <inge@lysator.liu.se>

	Add the two last projections.
	* src/lib/EquirectProjection.{h,cpp}: new files
	* src/lib/MercatorProjection.{h,cpp}: new files
	* src/lib/CMakeLists.txt: include the new files
	
	Control the Sun settings in the KDE GUI.
	Patch by Christian Banik.  Thanks!
	* src/marble_part.h (showSun): new function
	* src/marble_part.cpp (showSun): new function
	(copyMap): activate the show_sun action.
	* src/marble_part.rc (show_sun): new action
	* src/marbleui.rc (show_sun): new action

	First shot at new projection classes.
	* src/lib/AbstractProjection.{h,cpp}: new files
	* src/lib/SphericalProjection.{h,cpp}: new files
	* src/lib/CMakelists.txt: add new files

	Use ViewportParams everywhere
	* src/lib/ViewportParams.{h,cpp} (planetAxis): Used to be axis